[package]
name = "propped-blockchain"
version = "0.1.0"
authors = ["Elijah Grubb <egrubb@cs.umd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33.1"
env_logger = "0.7.1"
log = "0.4"
messaging-udp = { path = "messaging-udp" }
rand = "0.7.3"
