[package]
name = "messaging-udp"
version = "0.1.0"
authors = ["Elijah Grubb <u0894728@utah.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.7.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
